@@ -71,16 +71,16 @@ class Ability
       team = project.team
 
       # Rules based on role in project
-      if team.masters.include?(user)
+      if team.master?(user)
         rules += project_master_rules
 
-      elsif team.developers.include?(user)
+      elsif team.developer?(user)
         rules += project_dev_rules
 
-      elsif team.reporters.include?(user)
+      elsif team.reporter?(user)
         rules += project_report_rules
 
-      elsif team.guests.include?(user)
+      elsif team.guest?(user)
         rules += project_guest_rules
       end
 
