@@ -117,6 +117,22 @@ class ProjectTeam
     false
   end
 
+  def guest?(user)
+    find_tm(user.id).access_field == Gitlab::Access::GUEST
+  end
+
+  def reporter?(user)
+    find_tm(user.id).access_field == Gitlab::Access::REPORTER
+  end
+
+  def developer?(user)
+    find_tm(user.id).access_field == Gitlab::Access::DEVELOPER
+  end
+
+  def master?(user)
+    find_tm(user.id).access_field == Gitlab::Access::MASTER
+  end
+
   private
 
   def fetch_members(level = nil)
