@@ -17,6 +17,7 @@ v 7.0.0
   - UI improvements
   - Case-insensetive search for issues
   - Update to rails 4.1
+  - Improve performance of application for projects and groups with a lot of members
 
 v 6.9.2
   - Revert the commit that broke the LDAP user filter
